# wingi-agent-system

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  server.py
agents/: prompts.py
core/: database.py  llm_client.py  logger.py  models.py  orchestrator.py
tests/: test_engine.py
tools/: registry.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx
