[tool.poetry]
name = "wingi-agent-system"
version = "0.1.0"
description = "An autonomous multi-agent orchestration framework prototype inspired by Emergent."
authors = ["Wingi <wingi@emergent.sh>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "core" },
    { include = "agents" },
    { include = "tools" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.25.0"
google-cloud-aiplatform = "^1.48.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
openai = "^1.14.0"
google-generativeai = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"